11. Поиск дубликатов [#315066]